--- a/klanten.html
+++ b/klanten.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klanten</title>
 
-    <link rel="stylesheet" href="klanten.css">
+    <link rel="stylesheet" href="styles/klanten.css">
 </head>
 
 <body>
