Changed file names and linking

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="center">
             <div class="login">
                 <h3>Inloggen</h3>
-            <form action="klanten.html">
+            <form action="home.html">
                 <input type="email" placeholder="info@eqpos.nl" name="" id="">
                 <input type="password" placeholder="*******" name="" id="">
                 <button id="inloggen" type="submit" >Inloggen</button>
