Started on section (where the content goes)

--- a/home.html
+++ b/home.html
@@ -91,6 +91,9 @@
                         class="bi bi-brightness-low"></i></button>
             </div>
         </div>
+        <section style="margin: 1rem;">
+            
+        </section>
     </main>
 </body>
 
