Changed the page title to the page name

--- a/klanten.html
+++ b/klanten.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#712cf9">
-    <title>Eqpos Portaal - Gegevens</title>
+    <title>Eqpos Portaal - Klanten</title>
 
     <!-- External Scripts -->
     <script src="/docs/5.3/assets/js/color-modes.js"></script>
