Started working on the gegevens page

--- a/gegevens.html
+++ b/gegevens.html
@@ -84,8 +84,47 @@
         </aside>
         <!-- Page Content -->
         <section class="container-fluid bg-body-tertiary m-4 rounded-4 p-3">
-            <div class="container text-center rounded-5">
-            
+            <div class="container rounded-5">
+                <div class="row">
+                    <div class="col-6">
+                        <h1>Overzicht Bekende gegevens </h1>
+
+                    </div>
+                    <div class="col-6">
+                        <h1>Uploaden/invullen</h1>
+
+                    </div>
+                </div>
+                <hr>
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">Default file input example</label>
+                    <input class="form-control" type="file" id="formFile">
+                </div>
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                </div>
+
+
+
+                <ul>
+                    <li>Naam onderneming*</li>
+                    <li>KvK nummer*</li>
+                    <li>Naam Klant*</li>
+                    <li>Contactgegevens*</li>
+                    <li>Transactie gegevens</li>
+                    <ol>Modal voor contract</ol>
+                    <ol>Modal voor wijziging</ol>
+                    <li>Foto's binnen / buiten**</li>
+                    <li>ID eigena(a)r(en)*</li>
+                    <li>Productlijst/menukaart**</li>
+                    <li>Plattegrond**</li>
+                    <li>logo**</li>
+                    <li>Afschrift**</li>
+                    <li>Sepay Klantnummer***</li>
+                    <li>EQPOS Klantnummer***</li>
+                    <li>Hardware ID's en/of POI/BS-nummers ***</li>
+                </ul>
             </div>
         </section>
     </main>
