created overview page in case of multiple stores. real store data will go to vestiging.html

--- a/gegevens.html
+++ b/gegevens.html
@@ -86,45 +86,48 @@
         <section class="container-fluid bg-body-tertiary m-4 rounded-4 p-3">
             <div class="container rounded-5">
                 <div class="row">
-                    <div class="col-6">
-                        <h1>Overzicht Bekende gegevens </h1>
-
+                    <h1 class="text-center">Vestigingen: Bedrijfnaam</h1>
+                    <div class="col-6 p-4">
+                        <div class="card">
+                            <div class="row m-2">
+                                <h4 class="col-sm-10 text-center">Test vestiging #1</h4>
+                                <a class="col-sm-2 btn btn-sm btn-outline-primary" href="vestiging.html">Openen</a>
+                                <div class="col-6">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Contact gegevens <i class="bi bi-check-square text-success" style="float:right"></i></li>
+                                        <li class="list-group-item">Bedrijfgegevens <i class="bi bi-check-square text-success" style="float:right"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="col-6">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Transactie gegevens <i class="bi bi-check-square text-success" style="float:right"></i></li>
+                                        <li class="list-group-item">Systeem <i class="bi bi-check-square text-success" style="float:right"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-6">
-                        <h1>Uploaden/invullen</h1>
-
+                    <div class="col-6 p-4">
+                        <div class="card">
+                            <div class="row m-2">
+                                <h4 class="col-sm-10 text-center">Test vestiging #2</h4>
+                                <a class="col-sm-2 btn btn-sm btn-outline-primary" href="vestiging.html">Openen</a>
+                                <div class="col-6">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Contact gegevens <i class="bi bi-check-square text-success" style="float:right"></i></li>
+                                        <li class="list-group-item">Bedrijfgegevens <i class="bi bi-x-square text-danger" style="float:right"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="col-6">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Transactie gegevens <i class="bi bi-x-square text-danger" style="float:right"></i></li>
+                                        <li class="list-group-item">Systeem <i class="bi bi-check-square text-success" style="float:right"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <hr>
-                <div class="mb-3">
-                    <label for="formFile" class="form-label">Default file input example</label>
-                    <input class="form-control" type="file" id="formFile">
-                </div>
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">Multiple files input example</label>
-                    <input class="form-control" type="file" id="formFileMultiple" multiple>
-                </div>
-
-
-
-                <ul>
-                    <li>Naam onderneming*</li>
-                    <li>KvK nummer*</li>
-                    <li>Naam Klant*</li>
-                    <li>Contactgegevens*</li>
-                    <li>Transactie gegevens</li>
-                    <ol>Modal voor contract</ol>
-                    <ol>Modal voor wijziging</ol>
-                    <li>Foto's binnen / buiten**</li>
-                    <li>ID eigena(a)r(en)*</li>
-                    <li>Productlijst/menukaart**</li>
-                    <li>Plattegrond**</li>
-                    <li>logo**</li>
-                    <li>Afschrift**</li>
-                    <li>Sepay Klantnummer***</li>
-                    <li>EQPOS Klantnummer***</li>
-                    <li>Hardware ID's en/of POI/BS-nummers ***</li>
-                </ul>
             </div>
         </section>
     </main>
