Created the layout and added hardcoded dummy content

--- a/vestiging.html
+++ b/vestiging.html
@@ -85,10 +85,132 @@
         <!-- Page Content -->
         <section class="container-fluid bg-body-tertiary m-4 rounded-4 p-3">
             <div class="container rounded-5">
-                
+                <div class="row">
+                    <h1 class="text-center">Vestiging #1</h1>
+                    <hr>
+                    <div class="col-6 p-3">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Klant gegevens</h4>
+                            </div>
+                            <div class="card-body">
+                                <table class="table table-striped">
+                                    <tr>
+                                        <td>Naam:</td>
+                                        <td>J. Doe</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Telefoonnummer:</td>
+                                        <td>+31 6 12345678</td>
+                                    </tr>
+                                    <tr>
+                                        <td>E-mail:</td>
+                                        <td>email@domain.extension</td>
+                                    </tr>
+                                    <tr>
+                                        <td>ID</td>
+                                        <td><i class="bi bi-check-square text-success"></i></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="card-footer d-grid">
+                                <a href="#" class="btn btn-large btn-outline-primary">Wijzigen</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 p-3">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Bedrijf gegevens</h4>
+                            </div>
+                            <div class="card-body">
+                                <table class="table table-striped">
+                                    <tr>
+                                        <td>Bedrijfnaam:</td>
+                                        <td>Company B.V.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>KvK:</td>
+                                        <td>12345678</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Bedrijf Adres:</td>
+                                        <td>Kerkstraat 123, 1234 AB, Voorbeeldstad</td>
+                                    </tr>
+                                    <tr>
+                                        <td>bedrijf tel</td>
+                                        <td>+31 85 1234567</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="card-footer d-grid">
+                                <a href="#" class="btn btn-large btn-outline-primary">Wijzigen</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 p-3">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Transactie gegevens</h4>
+                            </div>
+                            <div class="card-body">
+                                <table class="table table-striped">
+                                    <tr>
+                                        <td>Sepay contract:</td>
+                                        <td><i class="bi bi-check-square text-success"></i> <button class="btn btn-sm btn-outline-secondary" style="float:right;">Downloaden</button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>TID:</td>
+                                        <td>BS123456</td>
+                                    </tr>
+                                    <tr>
+                                        <td>POI:</td>
+                                        <td>50312345</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Acceptatie</td>
+                                        <td>Debitcards, Mastercard & Visa</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="card-footer d-grid">
+                                <a href="#" class="btn btn-large btn-outline-primary">UItbetaal rekening Wijzigen</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 p-3">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Systeem gegevens</h4>
+                            </div>
+                            <div class="card-body">
+                                <table class="table table-striped">
+                                    <tr>
+                                        <td>Kassasysteem Set:</td>
+                                        <td>Algemeen</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kassa S/N:</td>
+                                        <td>JWE20231012345</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Pinautomaat MAC:</td>
+                                        <td>0008196E73B2</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Laatste Cloud Backup:</td>
+                                        <td>01-01-2023</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="card-footer d-grid"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 </body>
 
 </html>
+
