Created layout and added dummy content

--- a/klanten.html
+++ b/klanten.html
@@ -84,8 +84,106 @@
         </aside>
         <!-- Page Content -->
         <section class="container-fluid bg-body-tertiary m-4 rounded-4 p-3">
-            <div class="container text-center rounded-5">
-            
+            <div class="container rounded-5">
+                <form action="#" class="text-center">
+                    <div class="input-group" style="max-width: 20%;">
+                        <input type="search" class="form-control" placeholder="Zoeken" aria-label="Zoeken">
+                        <button type="submit" class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
+                      </div>
+                </form>
+                <table class="table table-stripped shadow text-center">
+                    <tr class="shadow">
+                        <th>Bedrijf naam</th>
+                        <th>Klant naam</th>
+                        <th>Telefoon nummer</th>
+                        <th>Adres</th>
+                        <th>Type Set</th>
+                        <th>Documenten compleet</th>
+                        <th>Datum</th>
+                        <th>Openen</th>
+                    </tr>
+                    <tr>
+                        <td>Test Bedrijf</td>
+                        <td>J. Doe</td>
+                        <td>+31 6 12345678</td>
+                        <td>Kerkstraat 123, 1234 AB, Voorbeeldstad</td>
+                        <td>Supermarkt Custom</td>
+                        <td><button class="btn btn-outline-warning"><i class="bi bi-exclamation-square"></i></button></td>
+                        <td>01-01-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>XYZ Winkel</td>
+                        <td>A. Jansen</td>
+                        <td>+31 6 11111111</td>
+                        <td>Pleinstraat 789, 1234 CD, Voorbeeldstad</td>
+                        <td>Winkel Premium</td>
+                        <td><button class="btn btn-outline-success"><i class="bi bi-check-square"></i></button></td>
+                        <td>20-04-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Café Buzz</td>
+                        <td>K. Adams</td>
+                        <td>+31 6 22222222</td>
+                        <td>Koffiestraat 456, 5678 EF, Koffiestad</td>
+                        <td>Café Set</td>
+                        <td><button class="btn btn-outline-warning"><i class="bi bi-exclamation-square"></i></button></td>
+                        <td>05-05-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Fitness Zone</td>
+                        <td>R. Martinez</td>
+                        <td>+31 6 33333333</td>
+                        <td>Sportstraat 123, 9876 AB, Sportstad</td>
+                        <td>Fitnes Set</td>
+                        <td><button class="btn btn-outline-danger"><i class="bi bi-x-square"></i></button></td>
+                        <td>15-06-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>E-commerce Co.</td>
+                        <td>S. Wilson</td>
+                        <td>+31 6 44444444</td>
+                        <td>Online Straat 789, 5678 FG, Winkelstad</td>
+                        <td>Online Winkel</td>
+                        <td><button class="btn btn-outline-success"><i class="bi bi-check-square"></i></button></td>
+                        <td>10-07-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Thuis Reparaties</td>
+                        <td>D. Bruin</td>
+                        <td>+31 6 55555555</td>
+                        <td>Gereedschapstraat 123, 4321 HG, Reparatiedorp</td>
+                        <td>Thuis Diensten</td>
+                        <td><button class="btn btn-outline-warning"><i class="bi bi-exclamation-square"></i></button></td>
+                        <td>25-08-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Studio Kunst</td>
+                        <td>C. Lee</td>
+                        <td>+31 6 66666666</td>
+                        <td>Doekstraat 789, 6543 JK, Creativiteitsstad</td>
+                        <td>Kunst Studio</td>
+                        <td><button class="btn btn-outline-success"><i class="bi bi-check-square"></i></button></td>
+                        <td>30-09-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    <tr>
+                        <td>Boeken Haven</td>
+                        <td>G. Miller</td>
+                        <td>+31 6 77777777</td>
+                        <td>Bibliotheekstraat 456, 7654 LM, Boekendorp</td>
+                        <td>Boekwinkel Set</td>
+                        <td><button class="btn btn-outline-warning"><i class="bi bi-exclamation-square"></i></button></td>
+                        <td>12-10-2023</td>
+                        <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button></td>
+                    </tr>
+                    
+                </table>
             </div>
         </section>
     </main>
