--- a/klanten.html
+++ b/klanten.html
@@ -7,7 +7,9 @@
     <title>Eqpos Portaal - Klanten</title>
 
     <!-- External Scripts -->
-    <script src="/docs/5.3/assets/js/color-modes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script>
     <script src="js/colorTheme.js" defer></script>
 
     <!-- External Stylesheets -->
@@ -92,6 +94,92 @@
                                 class="bi bi-search"></i></button>
                     </div>
                 </form>
+                <!-- Button trigger add customer modal -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addNewCustomer">
+                    Klant Toevoegen
+                </button>
+
+                <!-- add customer Modal -->
+                <div class="modal fade" id="addNewCustomer" data-bs-backdrop="static" data-bs-keyboard="true"
+                    tabindex="-1" aria-labelledby="addNewCustomerLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="text-center">Voeg Nieuwe Klant Toe</h3>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <!-- Send Form to submit new customer data -->
+                                <form autocomplete="off" action="#">
+                                    <div class="row mb-4 text-center">
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <input type="text" id="customerName" placeholder="Klant Naam" class="form-control" required/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <input type="text" id="companyName" placeholder="Bedrijfnaam" class="form-control" required/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12 my-2">
+                                            <div class="form-outline">
+                                                <input type="number" id="kvk" placeholder="12345678" class="form-control"/>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <input type="tel" id="phoneNumer" placeholder="0612345678" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <input type="email" id="email" placeholder="naam@domein.extentie" class="form-control" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <input type="text" id="postcode" placeholder="1234AB" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <input type="text" id="houseNumber" placeholder="117 B" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12 my-2">
+                                            <div class="form-outline">
+                                                <input type="text" id="setType" placeholder="Algemeen" class="form-control" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline">
+                                                <select id="payment" class="form-control" required>
+                                                    <option value="0" disabled selected>Kies een optie</option>
+                                                    <option value="Lease">Lease</option>
+                                                    <option value="Koop">Koop</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6 my-2">
+                                            <div class="form-outline input-group flex-nowrap">
+                                                <span class="input-group-text" id="addon-wrapping">€</span>
+                                                <input type="number" id="price" placeholder="00,00" class="form-control" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="d-grid">
+                                        <button type="submit" class="btn btn-outline-success">Opslaan</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
                 <table class="table table-striped table-hover shadow text-center">
                     <thead class="shadow">
                         <tr>
