Started working on the transaction contract layout part of the application

--- a/vestiging.html
+++ b/vestiging.html
@@ -158,6 +158,7 @@
                                     <tr>
                                         <td>Sepay contract:</td>
                                         <td><i class="bi bi-check-square text-success"></i> <button class="btn btn-sm btn-outline-secondary" style="float:right;">Downloaden</button></td>
+                                        <td><i class="bi bi-exclamation-square text-warning"></i> <a href="sepay-contract.html" class="btn btn-sm btn-outline-secondary" style="float:right;">Invullen</a></td>
                                     </tr>
                                     <tr>
                                         <td>TID:</td>
