Created klant-gegevens.html and added linking to the page from klanten

--- a/klanten.html
+++ b/klanten.html
@@ -205,7 +205,7 @@
                             <td><button class="btn btn-outline-warning"><i
                                         class="bi bi-exclamation-square"></i></button></td>
                             <td>01-01-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -217,7 +217,7 @@
                             <td>Algemeen</td>
                             <td><button class="btn btn-outline-success"><i class="bi bi-check-square"></i></button></td>
                             <td>20-04-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -230,7 +230,7 @@
                             <td><button class="btn btn-outline-warning"><i
                                         class="bi bi-exclamation-square"></i></button></td>
                             <td>05-05-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -242,7 +242,7 @@
                             <td>Algemeen</td>
                             <td><button class="btn btn-outline-danger"><i class="bi bi-x-square"></i></button></td>
                             <td>15-06-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -254,7 +254,7 @@
                             <td>Algemeen</td>
                             <td><button class="btn btn-outline-success"><i class="bi bi-check-square"></i></button></td>
                             <td>10-07-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -267,7 +267,7 @@
                             <td><button class="btn btn-outline-warning"><i
                                         class="bi bi-exclamation-square"></i></button></td>
                             <td>25-08-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -279,7 +279,7 @@
                             <td>Algemeen</td>
                             <td><button class="btn btn-outline-success"><i class="bi bi-check-square"></i></button></td>
                             <td>30-09-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                         <tr>
@@ -292,7 +292,7 @@
                             <td><button class="btn btn-outline-warning"><i
                                         class="bi bi-exclamation-square"></i></button></td>
                             <td>12-10-2023</td>
-                            <td><button class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></button>
+                            <td><a href="klant-gegevens.html" class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i></a>
                             </td>
                         </tr>
                     </tbody>
