--- a/klant-gegevens.html
+++ b/klant-gegevens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#712cf9">
-    <title>Eqpos Portaal - Klant Gegevens</title>
+    <title>Eqpos Portaal - Klanten</title>
 
     <!-- External Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -85,47 +85,198 @@
             </div>
         </aside>
         <!-- Page Content -->
-        <section class="container-fluid  p-3" style="max-height: 100vh; overflow-y: scroll;">
-            <div class="container-fluid bg-body-tertiary rounded-4">
-                <form class="m-3 p-5">
-                    <h1 class="text-center mb-1 ">Klant gegevens</h1>
+        <section class="container-fluid bg-body-tertiary m-4 rounded-4 p-3">
+            <div class="container-fluid rounded-5">
+                
+                <h1 class="text-center mb-1 ">Klant gegevens</h1>
 
-                    <div class="row">
+                <div class="row">
 
-                        <div class="col-md-6 col-sm-6 col-12 p-3">
-                            <div class="card mb-3 shadow-lg rounded-5 p-3">
-                                <div class="card-body">
-                                </div>
+                    <div class="col-md-6 col-sm-6 col-12 p-3">
+                        <div class="card mb-3 shadow-lg rounded-5 p-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h3 class="mb-0">Bedrijfsgegevens</h3>
+                                <button class="btn btn-outline-primary">Bewerken <i
+                                        class="bi bi-pencil-square ms-1"></i></button>
+                            </div>
+                            <hr>
+                            <div class="card-body">
+
                             </div>
                         </div>
-
-                        <div class="col-md-6 col-sm-6 col-12 p-3">
-                            <div class="card mb-3 shadow-lg rounded-5 p-3">
-                                <div class="card-body">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6 col-sm-6 col-12 p-3">
-                            <div class="card mb-3 shadow-lg rounded-5 p-3">
-                                <div class="card-body">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6 col-sm-6 col-12 p-3">
-                            <div class="card mb-3 shadow-lg rounded-5 p-3">
-                                <div class="card-body">
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
-                    
-                </form>
-            </div>
+
+                    <div class="col-md-6 col-sm-6 col-12 p-3">
+                        <div class="card mb-3 shadow-lg rounded-5 p-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h3 class="mb-0">Status</h3>
+                                <button class="btn btn-outline-primary">Bewerken <i
+                                        class="bi bi-pencil-square ms-1"></i></button>
+                            </div>
+                            <hr>
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-6 col-12 p-3">
+                        <div class="card mb-3 shadow-lg rounded-5 p-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h3 class="mb-0">Contact</h3>
+                                <button class="btn btn-outline-primary">Bewerken <i
+                                        class="bi bi-pencil-square ms-1"></i></button>
+                            </div>
+                            <hr>
+                            <div class="card-body">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-sm-6 col-12 p-3">
+                        <div class="card mb-3 shadow-lg rounded-5 p-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h3 class="mb-0">Hardware</h3>
+                                <button class="btn btn-outline-primary">Bewerken <i
+                                        class="bi bi-pencil-square ms-1"></i></button>
+                            </div>
+                            <h4 class="text-center mb-3">Set : Supermarkt</h4>
+                            <hr>
+                            <div class="card-body">
+
+                                <div class="accordion accordion-flush" id="accordionFlushExample">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                                aria-expanded="false" aria-controls="flush-collapseOne">
+                                                Kassa's 2
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped table-hover shadow text-center">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Type</th>
+                                                                <th>Serie nummer</th>
+                                                                <th>Functie</th>
+                                                                <th>Opmerkingen</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody class="table-group-divider">
+                                                            <tr>
+                                                                <td>Jassway</td>
+                                                                <td>JWE20230216174</td>
+                                                                <td>Slijterij</td>
+                                                                <td>Geen KD</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>PC</td>
+                                                                <td>DG8HJ93K</td>
+                                                                <td>Backoffice / Hoofdkassa</td>
+                                                                <td></td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>PC</td>
+                                                                <td>FP6K8W5M</td>
+                                                                <td>Client 1</td>
+                                                                <td>Vervangend model</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>PC</td>
+                                                                <td>VX9C3D2R</td>
+                                                                <td>Client 1</td>
+                                                                <td>Boot-loop is retour gekomen</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                                aria-expanded="false" aria-controls="flush-collapseTwo">
+                                                Pinautomaten 2
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the second item's accordion body. Let's imagine this being filled with
+                                                some actual content.</div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                                aria-expanded="false" aria-controls="flush-collapseThree">
+                                                Kassa lades 2
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the third item's accordion body. Nothing more exciting happening here in
+                                                terms of content, but just filling up the space to make it look, at
+                                                least at first glance, a bit more representative of how this would look
+                                                in a real-world application.</div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
+                                                aria-expanded="false" aria-controls="flush-collapseFour">
+                                                Magellan Weegschaal 1
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the third item's accordion body. Nothing more exciting happening here in
+                                                terms of content, but just filling up the space to make it look, at
+                                                least at first glance, a bit more representative of how this would look
+                                                in a real-world application.</div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#flush-collapseFive"
+                                                aria-expanded="false" aria-controls="flush-collapseFive">
+                                                Bon Printers 3
+                                            </button>
+                                        </h2>
+                                        <div id="flush-collapseFive" class="accordion-collapse collapse"
+                                            data-bs-parent="#accordionFlushExample">
+                                            <div class="accordion-body">Placeholder content for this accordion, which is
+                                                intended to demonstrate the <code>.accordion-flush</code> class. This is
+                                                the third item's accordion body. Nothing more exciting happening here in
+                                                terms of content, but just filling up the space to make it look, at
+                                                least at first glance, a bit more representative of how this would look
+                                                in a real-world application.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
         </section>
     </main>
 </body>
 
 </html>
+
