Updated structe still need to add the modals to edit it

--- a/klant-gegevens.html
+++ b/klant-gegevens.html
@@ -132,10 +132,35 @@
                             </div>
                             <hr>
                             <div class="card-body">
-
+                                <table class="table table-striped">
+                                    <tbody>
+                                        <tr>
+                                            <th>Bedrijfsnaam</th>
+                                            <td>Your Company Name</td>
+                                        </tr>
+                                        <tr>
+                                            <th>KvK-nummer</th>
+                                            <td>12345678</td>
+                                        </tr>
+                                        <tr>
+                                            <th>KVK Adres</th>
+                                            <td>Dezestraat 12b, 1234AB Ditdorp</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Bedrijf Adres</th>
+                                            <td>Anderestraat 21a, 4321BA Dezestad</td>
+                                        </tr>
+                                        <tr>
+                                            <th>IBAN</th>
+                                            <td>NL12ABCD3456789012</td>
+                                        </tr>
+                                        <!-- Add more rows for other company information as needed -->
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
+
 
                     <div class="col-md-6 col-sm-6 col-12 p-3">
                         <div class="card mb-3 shadow-lg rounded-5 p-3">
@@ -274,10 +299,45 @@
                             </div>
                             <hr>
                             <div class="card-body">
+                                <table class="table table-striped">
+                                    <tbody>
 
+                                        <tr>
+                                            <td colspan="4">
+                                                <h5 class="text-center">Eigenaar</h5>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>John Doe</td>
+                                            <td>123-456-7890</td>
+                                            <td>john@example.com</td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="4">
+                                                <h5 class="text-center">Managers</h5>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Jane Smith</td>
+                                            <td>987-654-3210</td>
+                                            <td>jane@example.com</td>
+                                        </tr>
+                                        <tr>
+                                            <td colspan="4">
+                                                <h5 class="text-center">Werknemers</h5>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Michael Johnson</td>
+                                            <td>555-555-5555</td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
+
 
                     <div class="col-md-6 col-sm-6 col-12 p-3">
                         <div class="card mb-3 shadow-lg rounded-5 p-3">
